Genre fix les collapse

--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -1,5 +1,5 @@
 body{
-    background: gray !important;
+    background: white !important;
 }
 .css-selector {
     font-family: 'Tangerine', serif;
